style.css
/* General Rules */
body {
  text-align: center;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  margin: 0;
  padding: 0;
}

a {
  color: #326891;
}

.flex {
  display: flex;
}

img {
  max-width: 5%;
}

.largerDiv {
  display: flex;
  justify-content: center;
  text-align: start;
}

.imgDiv {
  display: flex;
  align-items: center;
  flex-direction: column;
  max-width: 70%;
}

/* Main Header */
#logoHeader {
  position: fixed;
  height: 42px;
  justify-content: space-around;
  align-items: stretch;
  border-bottom: 1px solid rgb(202, 202, 202);
  background-color: white;
  padding: 0;
  margin: 0 auto;
  top: 0;
}

#logo {
  max-width: 15.5%;
}

#logoDiv {
  flex: 4;
  align-items: center;
}

.navlinks {
  color: black;
  text-decoration: none;
  font-weight: bold;
}

.navlinks:hover {
  text-decoration: underline black;
}

.navBtns:hover {
  background-color: rgb(202, 202, 202, 0.3);
}

.headlineBtn img {
  max-width: 70%;
}

.asideDiv img {
  max-width: 25%;
}

#menuDiv {
  display: flex;
  align-items: stretch;
  flex: 1;
  width: 200px;
}

#menuDiv a img {
  max-width: 20%;
}

#menuDiv a {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
}

#menuDiv .navlinks {
  flex: 2;
}

#logoHeaderBtns {
  flex: 1;
  justify-content: start;
  align-items: center;
}

#headerBtn1 {
  margin-right: 7px;
}

.headerbtn {
  background-color: rgb(72, 101, 145);
  color: #fff;
  font-family: nyt-franklin, helvetica, arial, sans-serif;
  border: 0 transparent;
  height: 35px;
  border-radius: 3px;
  font-weight: bold;
}

.headerbtn:hover {
  background-color: rgb(58, 94, 146);
  cursor: pointer;
}

/* Headline */
#headlineDiv {
  max-width: 30%;
  margin-right: auto;
  margin-left: auto;
  text-align: start;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 1.1rem;
  margin-top: 50px;
}

.headlinebtns {
  display: flex;
  width: 30%;
  height: 35px;
  margin-left: 30%;
}

.headlineBtn {
  width: 30px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: #ccc;
  margin-left: 15px;
  margin-bottom: 5px;
  border-radius: 50%;
}

.headlineBtn:hover {
  border: 0.01px solid rgb(82, 82, 82);
  background-color: white;
}

.whatslogo {
  max-width: 50%;
}

/* Main Page Text */
#mainImg {
  max-width: 100%;
}

.textUnderImg {
  color: #666;
}

.imgDiv p {
  width: 75%;
}

.credits {
  color: #888;
}

#authoranchor {
  color: #333;
  text-decoration: #ccc underline;
}

#advertising {
  margin-right: auto;
  margin-left: auto;
  border-top: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  width: 30%;
  font-size: 20px;
}

#authoranchor:hover {
  text-decoration: none;
}

#authorh2 {
  color: #333;
}

.mainText {
  width: 35%;
  text-align: start;
  margin-right: auto;
  margin-left: auto;
  font-family: nyt-imperial, georgia, 'times new roman', times, serif;
  font-size: 1.25em;
}

.asideDiv {
  max-width: 20%;
  float: right;
  align-content: center;
}

.asideflex {
  display: flex;
  flex-direction: column;
}

#telescope {
  max-width: 65%;
}

#endtext {
  color: #666;
  font-size: 12px;
}

#endtext a {
  color: #666;
}

#endtext a:hover {
  color: #666;
  text-decoration: none;
}

#endoftextdiv {
  display: flex;
  justify-content: space-between;
  width: 35%;
  margin-right: auto;
  margin-left: auto;
}

#endoftextbtn {
  flex: 4;
}

#inflationtitle {
  height: 100px;
  width: 57%;
  text-align: start;
  margin-right: auto;
  margin-left: auto;
}

#inflationtitle p {
  color: #666;
}

#inflation {
  max-width: 55%;
}

